# bobble_opencv

./: CMakeLists.txt  README.md  bobble_opencv.cpp  head_api.cpp  main.cpp  main_android.cpp  webp_manip.cpp
include/: head_api.h  head_api.hpp  webp_manip.h  webp_manip.hpp
include/json/: jsoncpp.cpp
include/opencv2/: opencv_modules.hpp
include/webp/: config.h
